<resources>
    <string name="app_name">PersonalBest</string>
    <string name="goal_header">Today\'s Step Goal:</string>
    <string name="steps_header">Number of Steps Taken:</string>
    <string name="start_button">Start Run/Walk</string>
    <string name="title_activity_bar_chart">BarChart</string>
    <string name="title_activity_running_mode">RunningMode</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="congrats_message">Congratulations! Do you want to set a new step goal?</string>
    <string name="yes_button">Yes</string>
    <string name="not_now">Not Now</string>
    <string name="goal_updated_toast">Step count has been updated</string>
    <string name="suggested">Use suggested: </string>
    <string name="custom">Set Custom</string>
    <string name="set_method">How will you set the new step goal?</string>
    <string name="cancel">Cancel</string>
    <string name="custom_prompt">How many steps will your custom goal be?</string>
    <string name="confirm_custom">Confirm</string>
    <string name="custom_empty_prompt">Please enter a number.</string>
    <string name="too_low">Please enter at least 10 steps.</string>
    <string name="daily_goal">Daily Goal:</string>
    <string name="steps_accomplished">Steps run:</string>
    <string name="velocity">Velocity:</string>
    <string name="mph">miles/hr</string>
    <string name="time_elapsed">Time Elapsed:"</string>
    <string name="miles">Miles:</string>
    <string name="end_run_button">End Run/Walk</string>
    <string name="run_back_button">Back</string>
    <string name="today_s_steps">Today\'s steps:</string>

    <string name="title_activity_step_summary">StepSummary</string>
    <string name="title_activity_friend_summary">FriendSummary</string>


    <!-- Friends Strings -->
    <string name="outgoing_request_header">Pending Requests:</string>
    <string name="incoming_request_header">Incoming Request:</string>
    <string name="friend_list_header">Friend List:</string>
    <string name="friend_list_button">Go To Friends</string>
    <string name="title_activity_friend_list_page">FriendListPage</string>
    <string name="add_friend_dialogue_title">Add Friend</string>
    <string name="add_friend_dialogue_description">Enter Email:</string>
    <string name="title_activity_friend_home_page">FriendHomePage</string>
    <string name="intent_email_key">email</string>

    <!-- Friends List Strings for Shared Preferences -->
    <string name="shared_pref_file_name">friend_list</string>
    <string name="shared_pref_string_set_key">emailList</string>


    <!--Message Strings-->
    <string name="title_activity_message_page">MessagePage</string>
    <string name="message_location_hint">Message will appear here</string>
    <string name="username_hint">User name</string>
    <string name="message_hint">Message</string>
    <string name="send_message_button">Send</string>
    <string name="friend_homepage_button">Go To Friend\'s Homepage</string>
    <string name="message_back_button">Back</string>


</resources>
